--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
 
 <div class="profile-header">
-    <img src="image.png" alt="Kavish Shah" class="profile-pic">
+    <img src="Image.png" alt="Kavish Shah" class="profile-pic">
     <div class="text-info">
         <h1>KAVISH SHAH</h1>
         <p>6TH GRADER</p>
